--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ textarea:focus {
 
 button {
     font: inherit;
-    background: darkmagenta;
-    border: 1px solid darkmagenta;
+    background: gray;
+    border: 1px solid gray;
     cursor: pointer;
     color: white;
     padding: 0.75rem 1rem;
@@ -57,6 +57,7 @@ button:active {
 }
 
 .projects {
+    flex-grow: 8;
     margin: 1rem;
     border: 1px solid darkmagenta;
 }
@@ -69,8 +70,14 @@ button:active {
     align-items: center;
 }
 
+#finished-projects .container {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 #finished-projects {
     border-color: #0044ff;
+
 }
 
 #finished-projects header {
@@ -90,6 +97,7 @@ button:active {
 
 .projects li {
     box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
+    border-radius: 25px;
     padding: 1rem;
     margin: 1rem;
     background-color: white;
@@ -135,3 +143,27 @@ button:active {
 .hidden {
     display: none;
 }
+
+
+#app {
+    display: flex;
+}
+
+.container {
+    display: flex;
+}
+
+.container ul {
+    flex-grow: 4;
+    width: 100%;
+    margin: auto;
+}
+
+.button {
+    margin: auto;
+}
+
+img {
+    width: 100%;
+}
+
